Fix download button alignment

--- a/app/assets/stylesheets/media.scss
+++ b/app/assets/stylesheets/media.scss
@@ -89,17 +89,18 @@
 .media-download-buttons {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin: 0.25rem;
+  align-items: flex-start;
   justify-content: space-around;
+  margin: 0.25rem;
 }
 
 .download-button {
   padding: 0 0.5em;
-  font-size: 0.75em;
-  width: 3.8em;
+  font-size: 0.8em;
   height: 1.4em;
   border: none;
+  text-align: left;
+  line-height: normal;
 }
 
 .mampf-card {
